--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ sourceCompatibility = '17'
 
 def beamVersion = '2.43.0'
 def sparkVersion = '3.3.1'
+def flinkVersion = '1.16.0'
 def openrewriteVersion = '1.13.1'
 
 repositories {
@@ -26,10 +27,19 @@ dependencies {
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 
     implementation("org.apache.beam:beam-sdks-java-core")
+
+    // Spark
     implementation("org.apache.spark:spark-core_2.13:${sparkVersion}")
 
+    // Flink
+    implementation("org.apache.flink:flink-streaming-java:${flinkVersion}")
+    implementation("org.apache.flink:flink-core:${flinkVersion}")
+
     implementation("org.openrewrite:rewrite-java")
+    implementation("org.openrewrite:rewrite-java-11")
     implementation("org.openrewrite:rewrite-java-17")
+    implementation("org.openrewrite:rewrite-maven")
+    implementation("org.openrewrite:rewrite-gradle")
     testImplementation("org.openrewrite:rewrite-test")
 
     implementation("net.lingala.zip4j:zip4j:2.11.2")
