--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ def beamVersion = '2.43.0'
 def sparkVersion = '3.3.1'
 def flinkVersion = '1.16.0'
 def openrewriteVersion = '1.13.1'
+def googleJavaFormatVersion = '1.15.0'
 
 repositories {
     mavenCentral()
@@ -42,7 +43,9 @@ dependencies {
     implementation("org.openrewrite:rewrite-gradle")
     testImplementation("org.openrewrite:rewrite-test")
 
+    // Utility
     implementation("net.lingala.zip4j:zip4j:2.11.2")
+    implementation("com.google.googlejavaformat:google-java-format:$googleJavaFormatVersion")
 
 }
 
