--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,9 @@ dependencies {
     implementation("com.google.googlejavaformat:google-java-format:$googleJavaFormatVersion")
 
     // Logging
-    testImplementation("ch.qos.logback:logback-core:1.4.5")
-    testImplementation("ch.qos.logback:logback-classic:1.4.5")
-    testImplementation("org.slf4j:slf4j-api:2.0.6")
+    implementation("ch.qos.logback:logback-core:1.2.11")
+    implementation("ch.qos.logback:logback-classic:1.2.11")
+    implementation("org.slf4j:slf4j-api:1.7.36")
 
     // Run Beam example
     implementation("org.apache.beam:beam-runners-direct-java")
@@ -59,6 +59,7 @@ dependencies {
 configurations {
     all {
         exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     }
 }
 
