Add confluent repository

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ def googleJavaFormatVersion = '1.15.0'
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://packages.confluent.io/maven"
+    }
 }
 
 dependencies {
